crates/biome_html_parser/tests/html_specs/ok/svelte/directives/use_basic.svelte
<div use:tooltip>Hover me</div>
