crates/biome_html_parser/tests/html_specs/error/svelte/directives/use_missing_name.svelte
<div use:>Hover me</div>
